fixed an issue with the sorting triangle not showing on the correct column

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -243,6 +243,7 @@ table.highlight-row-on-hover tr:hover td {
 }
 
 .sort-loading::after {
+    margin-left: 0.1em;
     vertical-align: baseline;
 }
 
